# Webotmvp

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  WeKnora.code-workspace  docker-compose.dev.yml  docker-compose.yml  mvp.md
.openspec/: README.md
src/: alembic.ini  pyproject.toml
src/app/: README.md  __init__.py  container.py  main.py
src/app/api/: README.md  __init__.py  deps.py  router.py
src/app/api/v1/: __init__.py
src/app/client/: README.md  __init__.py  base.py  embedding_client.py  factory.py  llm_client.py  ocr_client.py  rerank_client.py
src/app/common/: README.MD  README.md  __init__.py  config.py  constants.py  error_codes.py  error_handler.py  exceptions.py  logger.py  logging.py  response.py  security.py
src/app/context/: README.md  __init__.py  compression.py  context_manager.py  context_service.py  storage.py
src/app/docparser/: README.md  __init__.py  document.py
src/app/docparser/ocr/: __init__.py  base.py  engine.py  paddle_backend.py  vlm_backend.py
src/app/docparser/parsers/: __init__.py  base_parser.py  content_fetcher.py  csv_parser.py  docx_parser.py  excel_parser.py  image_parser.py  markdown_parser.py  parser_factory.py  pdf_parser.py  text_parser.py  web_parser.py
src/app/docparser/splitter/: __init__.py  header_hook.py  text_splitter.py
src/app/event/: __init__.py  event_bus.py  events.py
src/app/infra/: README.md  __init__.py  db.py  neo4j_client.py  redis.py  storage_client.py
src/app/middleware/: README.md  __init__.py  auth.py  error_handler.py  logger.py  recovery.py  request_id.py  trace.py
src/app/repositories/: README.md  __init__.py  auth_token_repository.py  base_repository.py  chunk_repository.py  embedding_repository.py  knowledge_base_repository.py  knowledge_repository.py  knowledge_tag_repository.py  message_repository.py  model_repository.py  session_repository.py  user_repository.py
src/app/repositories/models/: __init__.py  auth_token.py  base.py  chunk.py  embedding.py  knowledge.py  knowledge_base.py  knowledge_tag.py  message.py  model.py  session.py  user.py
src/app/repositories/retriever/: __init__.py  neo4j_repository.py  postgres_repository.py
src/app/schemas/: README.md  __init__.py  auth.py  chat.py  common.py  knowledge.py  knowledge_base.py  knowledge_tag.py  message.py  model.py  search.py  session.py
src/app/services/: README.md  __init__.py  auth_service.py  chat_service.py  chunk_service.py  embedding_service.py  graph_service.py  knowledge_base_service.py  knowledge_service.py  knowledge_tag_service.py  message_service.py  model_service.py  session_service.py  user_service.py
src/app/services/chat_pipeline/: README.md  __init__.py  chat_completion_stream.py  common.py  extract_entity.py  filter_top_k.py  into_chat_message.py  load_history.py  merge.py  pipeline.py  rerank.py  rewrite.py  search.py  search_entity.py  search_parallel.py
src/app/services/retriever/: __init__.py  hybrid_retriever_service.py
src/app/stream/: __init__.py  manager.py  redis_manager.py
src/app/utils/: __init__.py  datetime.py  file_size.py  hashing.py  json.py  sanitize.py  task_id.py
src/app/worker/: README.md  __init__.py  ingestion_worker.py  queue.py  tasks.py
src/migrations/: README.md  env.py  script.py.mako
src/migrations/versions/: 0001_init.py
src/tests/: conftest.py  test_health.py
(+73 files in other folders)
