# 文件职责：维护 `src/pyproject.toml` 的 M1 骨架与结构约束。
# 边界：仅定义职责边界与调用契约，不在本文件实现 M2-M8 的完整业务闭环。
# TODO：
# - [arch][P1][todo] 在 M1 完成本模块能力实现与回归验证。

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "webotmvp-backend"
version = "0.1.0"
description = "Webot MVP backend"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.116.0",
  "uvicorn[standard]>=0.35.0",
  "sqlalchemy>=2.0.36",
  "alembic>=1.14.0",
  "pydantic>=2.10.0"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
