# 文件职责：维护后端工程配置与依赖声明，约束开发测试入口。
# 边界：只描述本文件边界与上下游关系；不在此实现跨阶段业务闭环。
# TODO：
# - [arch][P1][todo] 完成条件：形成可执行的分层契约并消除职责重叠；验证方式：执行 `cd src && python -m pytest -q` 并通过相关模块用例；归属模块：`src/pyproject.toml`。

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "webotmvp-backend"
version = "0.1.0"
description = "Webot MVP backend"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.116.0",
  "uvicorn[standard]>=0.35.0",
  "sqlalchemy>=2.0.36",
  "alembic>=1.14.0",
  "pydantic>=2.10.0"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
